--- a/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
+++ b/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
@@ -3,7 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -266,6 +266,7 @@
                         <outlet property="subscriptionPriceLabelUpConstraint" destination="tTr-L2-qgE" id="bdF-aw-LOb"/>
                         <outlet property="termsOfUseButtonOutlet" destination="U0u-N9-2VF" id="GK4-1i-35Y"/>
                         <outlet property="upConstraintYourPersonalSportsBettingAdvisor" destination="mfF-kZ-Hzc" id="Pd2-8J-Xs3"/>
+                        <outlet property="upConstraintiLoveBetsLabel" destination="8Fk-WS-4Mc" id="aut-Tx-ZXb"/>
                         <outlet property="yourPersonalSportsBettingAdvisorLabel" destination="Pdb-3d-KjB" id="9eL-QB-lTD"/>
                     </connections>
                 </viewController>
